[tool.poetry]
name = "pydustry.py"
version = "2.1.0"
description = "Module for server information in the game Mindustry."
repository = "https://github.com/RCR-OOP/pydustry.py"
authors = [
    "Romanin <semina054@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "pydustry"}]
keywords = ["midnustry", "game", "server", "parser", "infomation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
